Prevent reply details overlapping with grippie icon

--- a/common/common.scss
+++ b/common/common.scss
@@ -4212,7 +4212,7 @@ body .bootbox.modal .modal-footer :not(.disclaimer) a.btn-primary {
   right: 16px;
 }
 #reply-control .reply-to .reply-details {
-  max-width: calc(50% - 20px);
+  max-width: calc(50% - 36px);
   position: absolute;
   top: 6.000003px;
   left: 16px;
